--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-epic-spinners": "^0.2.1",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "reset-css": "^4.0.1"
   },
   "devDependencies": {
