--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
+    "redux-api-middleware": "^2.3.0",
     "redux-thunk": "^2.3.0",
     "reset-css": "^4.0.1"
   },
