--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-api-middleware": "^2.3.0",
+    "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "reset-css": "^4.0.1"
   },
